--- a/style.css
+++ b/style.css
@@ -269,19 +269,8 @@ img{
 .p-pr{
     margin-top:10px;
 }
-.logo-mask {
-    display: inline-block;
-    background-color: red; /* Cambia el color a tu preferencia */
-    -webkit-mask-image: url('./assets/images/logo.png');
-    mask-image: url('./assets/images/logo.png');
-    -webkit-mask-size: contain;
-    mask-size: contain;
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    -webkit-mask-position: center;
-    mask-position: center;
-    width: 100%;
-    height: 100%;
+.p-jst{
+    text-align: justify;
 }
 
 hr{
